fixed footer align

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -11,6 +12,16 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+footer {
+    
+    text-align: center;
+    background-color: rgba(36, 36, 36, 0.95);;
+    width: 100%;
+}
+
+footer:hover p {
+  color: #00ffcc;
 }
 
 a {
@@ -24,15 +35,19 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  
+
   min-width: 320px;
-  min-height: 100vh;
+  
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+#root {
+  margin: 0;
+  flex: 1;
 }
 
 button {
